Revert ANTLR version bump